@@ -9,11 +9,10 @@ features (please refer to ``CHANGES.txt`` for those).
 Upgrading to 0.13
 -----------------
 
-- We moved to newer versions of zope packages.  This means your code
-  can now get some new deprecation warnings for imports that have been
-  moved.  Please check your code and fix your imports if you get those
-  warnings.
-
+- We moved to newer versions of zope packages, using the KGS list for
+  Zope 3.4c1.  This means your code can now get some new deprecation
+  warnings for imports that have been moved. Please check your code
+  and fix your imports if you get those warnings.
 
 Upgrading to 0.12
 -----------------
