@@ -45,7 +45,7 @@ zope.app.pagetemplate = 3.4
 zope.app.preference = 3.4.1
 zope.app.principalannotation = 3.4
 zope.app.publication = 3.4.3
-zope.app.publisher = 3.5a2
+zope.app.publisher = 3.4.1
 zope.app.renderer = 3.4
 zope.app.rotterdam = 3.4.1
 zope.app.schema = 3.4
@@ -87,7 +87,7 @@ zope.minmax = 1.1
 zope.modulealias = 3.4
 zope.pagetemplate = 3.4
 zope.proxy = 3.4
-zope.publisher = 3.5.0a1.dev-r78838
+zope.publisher = 3.4.2
 zope.schema = 3.4
 zope.security = 3.4
 zope.securitypolicy = 3.4
@@ -100,5 +100,5 @@ zope.tales = 3.4
 zope.testbrowser = 3.4.2
 zope.testing = 3.5.1
 zope.thread = 3.4
-zope.traversing = 3.5.0a1.dev-r78730
+zope.traversing = 3.4.0
 zope.viewlet = 3.4.2
